--- a/myweb.yaml
+++ b/myweb.yaml
@@ -26,7 +26,7 @@ spec:
         app: myweb
     spec:
       containers:
-      - image: harbor.unimed.ac.id/repository/myweb:1
+      - image: harbor.unimed.ac.id/library/myweb:1
         imagePullPolicy: Always
         name: myweb
       imagePullSecrets:
